--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,18 +1,38 @@
-#app {
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+
+*, :after, :before {
+  box-sizing: border-box;
 }
 body {
-  color: #ccc;
+  height: 100%;
   padding: 0;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+}
+
+.content {
+  width: 60%; 
+  padding-top:50px;
+}
+
+.img-container {
+  margin: 0 0 50px;
+  
+  img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+  }
+}
+
+.title{
+
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 }
 #stage{
+  display: none;
   height:100vh;
   width: 100%;
   background: #262626;
