--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -9,8 +9,92 @@ padding: 0;
   }
 
 } 
-body {
+body, html{
   height: 100%;
+}
+  .nav-button{
+
+    position: fixed;
+    transform-origin: 50% 50%;
+    top: 5%;
+    right: 3%;
+    width: 30px;
+    height: 30px;
+    z-index: 10;
+  
+  
+    span{
+
+      display: block;
+      background: #FFF;
+      width: 100%;
+      height: 4px;
+      margin-bottom: 4px;
+  
+      &:last-child{
+  
+        margin-bottom: 0;
+      }
+  
+  
+    }
+  }
+  
+
+
+.menu{
+
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: 4;
+  top: 0;
+
+  left: 0;
+
+  background: #000;
+  color: #FFF;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+
+  ul{
+
+    display: flex;
+    list-style: none;
+
+    justify-content: center;
+
+    align-items: center;
+
+    li{
+
+
+      margin-right: 100px;
+      font-size: 4rem;
+
+      &:last-child{
+
+        margin:0;
+      }
+    }
+
+
+  }
+}
+
+.back{
+
+  position: absolute;
+  top:0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: left;
 }
 
 .content {
@@ -34,56 +118,19 @@ body {
   display: inline-block;
   text-align: center;
   height: 400px;
-  margin-top: 300px;
-}
-#stage{
-  height:100vh;
-  width: 100%;
-  background: #262626;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-}
-.box {
-  height: 60px;
-  width: 60px;
-  align-items: center;
-  margin: 4px;
-  font-size: 1.2em;
-  font-weight: 700;
-  color: white;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  
-}
-.box1 {
-  background-color: #84c186;
-}
+  color: #FFF;
 
-.large{
 
-  background: red;
-}
+  h1{
 
-.box2 {
-  background-color: #8b6c4c;
-}
 
-.box3 {
-  background-color: #39a3ee;
-}
+    font-size: 5rem;
+  }
 
-.box4 {
-  background-color: #ef9144;
-}
+  p{
 
-.box5 {
-  background-color: #cd58eb;
-}
-
-.box6 {
-  background-color: #b84b4b;
+    width: 40%;
+    margin: 0 auto;
+  }
 }
