--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -45,7 +45,7 @@ body, html{
 .menu{
 
   width: 100%;
-  height: 100vh;
+  height: 0;
   position: absolute;
   z-index: 4;
   top: 0;
@@ -75,6 +75,7 @@ body, html{
 
       margin-right: 100px;
       font-size: 4rem;
+      transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
       &:last-child{
 
