--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -40,7 +40,16 @@ body, html{
     }
   }
   
+.bloc{
 
+  width: 500px;
+  height: 500px;
+  border: solid 10px rgba(240, 255, 0, 1);
+  transform: translate(-50%,-50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
 
 .menu{
 
@@ -52,7 +61,7 @@ body, html{
 
   left: 0;
 
-  background: #000;
+  background: rgba(0, 0, 0, 0.7);
   color: #FFF;
 
   display: flex;
