--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -21,6 +21,7 @@ body, html{
     width: 30px;
     height: 30px;
     z-index: 10;
+    cursor: pointer;
   
   
     span{
@@ -28,18 +29,47 @@ body, html{
       display: block;
       background: #FFF;
       width: 100%;
-      height: 4px;
+      height: 2px;
       margin-bottom: 4px;
+      position: absolute;
+      transform: translate(-50%,-50%);
+      top:50%;
+      left: 50%;
+      
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   
+      &:first-child{
+        top: 0px;
+        transform: rotate(0deg);
+        
+  
+      }
       &:last-child{
   
-        margin-bottom: 0;
+        top: 8px;
+        transform: rotate(0deg);
+
       }
   
   
     }
   }
   
+  .open{
+
+    span:first-child{
+      transform: rotate(45deg);
+      top: 8px;
+
+    }
+    span:nth-child(2){
+
+      
+      transform: rotate(-45deg);
+    }
+    
+  }
+
 .bloc{
 
   width: 500px;
