--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -115,6 +115,7 @@ body, html{
       margin-right: 100px;
       font-size: 4rem;
       transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      cursor: pointer;
 
       &:last-child{
 
@@ -124,6 +125,11 @@ body, html{
 
 
   }
+}
+
+.backImage{
+
+  background: url('../../assets/img/back2.jpg') center no-repeat;
 }
 
 .back{
