--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Chango-Regular";
+  src: url("@/assets/fonts/Chango-Regular.ttf") format("woff2");
+}
+
 
 *{
 
@@ -149,6 +154,11 @@ body, html{
       &:last-child{
 
         margin:0;
+      }
+
+      a{
+
+        text-decoration: none;
       }
     }
 
