--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,7 +1,16 @@
-@font-face {
-  font-family: "Chango-Regular";
-  src: url("@/assets/fonts/Chango-Regular.ttf") format("woff2");
+@import url('https://fonts.googleapis.com/css?family=Chango|Dancing+Script&display=swap');
+
+
+
+:root{
+
+  --title: font-family: 'Chango', cursive;
+  --text: font-family: 'Dancing Script', cursive;
 }
+
+$color: #FFF;
+
+
 
 
 *{
@@ -206,11 +215,13 @@ body, html{
 
 
     font-size: 5rem;
+    font-family: var(--title);
   }
 
   p{
 
     width: 40%;
     margin: 0 auto;
+    font-family: var(--text);
   }
 }
