--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,34 +2,49 @@
 
 
 
-:root{
 
-  --title: font-family: 'Chango', cursive;
-  --text: font-family: 'Dancing Script', cursive;
-}
 
-$color: #FFF;
 
+
+
+
+$title: 'Chango', cursive;
+$text: 'Dancing Script', cursive;
 
 
 
 *{
-
-margin: 0;
-padding: 0;
-
+  
+  margin: 0;
+  padding: 0;
+  
   :after, :before {
     box-sizing: border-box;
   }
-
+  
 } 
-body, html{
-  height: 100%;
+body{
+  height: auto;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.cursor{
+  
+  width: 25px;
+  height: 25px;
+  border: solid 1px rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  position: absolute;
+  z-index: 9999;
+  transition: all 0.2s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .banner{
-
-
+  
+  
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -38,82 +53,82 @@ body, html{
   align-items: center;
   position: relative;
   z-index: -2;
-
-
-
+  
+  
+  
   video{
-
+    
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-
+    
     height: 100vh;
     object-fit: cover;
     object-position: center;
     pointer-events: none;
   }
 }
-  .nav-button{
-
-    position: fixed;
-    transform-origin: 50% 50%;
-    top: 5%;
-    right: 3%;
-    width: 30px;
-    height: 30px;
-    z-index: 10;
-    cursor: pointer;
+.nav-button{
+  
+  position: fixed;
+  transform-origin: 50% 50%;
+  top: 5%;
+  right: 3%;
+  width: 30px;
+  height: 30px;
+  z-index: 10;
+  cursor: pointer;
   
   
-    span{
-
-      display: block;
-      background: #FFF;
-      width: 100%;
-      height: 2px;
-      margin-bottom: 4px;
-      position: absolute;
-      transform: translate(-50%,-50%);
-      top:50%;
-      left: 50%;
+  span{
+    
+    display: block;
+    background: #FFF;
+    width: 100%;
+    height: 2px;
+    margin-bottom: 4px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top:50%;
+    left: 50%;
+    
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    
+    &:first-child{
+      top: 0px;
+      transform: rotate(0deg);
       
-      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  
-      &:first-child{
-        top: 0px;
-        transform: rotate(0deg);
-        
-  
-      }
-      &:last-child{
-  
-        top: 8px;
-        transform: rotate(0deg);
-
-      }
-  
-  
+      
     }
-  }
-  
-  .open{
-
-    span:first-child{
-      transform: rotate(45deg);
+    &:last-child{
+      
       top: 8px;
-
-    }
-    span:nth-child(2){
-
+      transform: rotate(0deg);
       
-      transform: rotate(-45deg);
     }
     
+    
   }
+}
+
+.open{
+  
+  span:first-child{
+    transform: rotate(45deg);
+    top: 8px;
+    
+  }
+  span:nth-child(2){
+    
+    
+    transform: rotate(-45deg);
+  }
+  
+}
 
 .bloc{
-
+  
   width: 500px;
   height: 500px;
   border: solid 10px rgba(240, 255, 0, 1);
@@ -124,59 +139,59 @@ body, html{
 }
 
 .menu{
-
+  
   width: 100%;
   height: 0;
   position: absolute;
   z-index: 4;
   top: 0;
-
+  
   left: 0;
-
+  
   background: rgba(0, 0, 0, 0.7);
   transition: all 5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5;
   color: #FFF;
-
+  
   display: flex;
   justify-content: center;
   align-items: center;
-
-
-
+  
+  
+  
   ul{
-
+    
     display: flex;
     list-style: none;
-
+    
     justify-content: center;
-
+    
     align-items: center;
-
+    
     li{
-
-
+      
+      
       margin-right: 100px;
       font-size: 4rem;
       transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       cursor: pointer;
-
+      
       &:last-child{
-
+        
         margin:0;
       }
-
+      
       a{
-
+        
         text-decoration: none;
       }
     }
-
-
+    
+    
   }
 }
 
 .back{
-
+  
   position: absolute;
   top:0;
   right: 0;
@@ -184,11 +199,6 @@ body, html{
   height: 100%;
   object-fit: cover;
   object-position: left;
-}
-
-.content {
-  width: 60%; 
-  padding-top:50px;
 }
 
 .img-container {
@@ -202,26 +212,78 @@ body, html{
 }
 
 .title{
-
+  
   width: 100%;
-  display: inline-block;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  height: 400px;
-
   color: #FFF;
-
-
-  h1{
-
-
-    font-size: 5rem;
-    font-family: var(--title);
-  }
-
-  p{
-
+  
+  position: relative;
+  
+  h2{
+    
     width: 40%;
     margin: 0 auto;
-    font-family: var(--text);
+    font-family: $text;
+    font-size: 2rem;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
   }
+  
+  h1{
+    
+    
+    font-size: 5rem;
+    font-family: $title;
+    
+    position: absolute;
+    top:55%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+  p{
+    
+    
+    font-size: 2rem;
+    font-family: $text;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+  
+  .btn{
+    
+    width: 60px;
+    height: 60px;
+    background: #FFF;
+    color: grey;
+    border-radius: 50%;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.3);
+    position: absolute;
+    padding: 6px;
+    top:55%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition: all 0.2s ease-out;
+    
+    &:hover{
+      background: red;
+      
+      
+      
+      
+    }
+    
+    
+    
+  }
+  
+  
 }
