--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -42,6 +42,21 @@ body{
   transition: all 0.2s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
+#player{
+
+  position: absolute;
+  top: 10;
+  left: 10;
+  z-index: 10;
+
+  a{
+
+    position: absolute;
+    top: 100px;
+    z-index: 15;
+  }
+}
+
 .banner{
   
   
@@ -271,13 +286,12 @@ body{
     top:55%;
     left: 50%;
     transform: translate(-50%,-50%);
+    transform-origin: center;
     transition: all 0.2s ease-out;
     
     &:hover{
-      background: red;
-      
-      
-      
+      transform: translate(-50%,-50%) scale(1.2) !important;
+      transform-origin: initial !important;
       
     }
     
@@ -286,4 +300,58 @@ body{
   }
   
   
+}
+
+.animal-wrap{
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100vh;
+  z-index: 10;
+
+
+
+    .parrot{
+
+      position: absolute;
+      bottom: 20%;
+      left: 20%;
+
+
+      &:after{
+
+        content: "";
+    display: block;
+    width: 1px;
+    height: 40px;
+    background: #FFF;
+    left: 50%;
+    bottom: -70%;
+    -webkit-transform: translate(-50% -50%);
+    transform: translate(-50% -50%);
+    position: absolute;
+      }
+     
+
+      img{
+
+        width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    border: solid 2px #FFF;
+      }
+
+      p{
+
+        font-family: $text;
+
+        color: #FFF;
+      }
+
+    }
+
 }
