--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -373,7 +373,8 @@ body{
 .animal-wrap{
 
   position: fixed;
-  top: 0;
+  visibility: hidden;
+  top:0;
   left: 0;
   width:100%;
   height: 100vh;
@@ -460,5 +461,39 @@ body{
       }
 
     }
+
+}
+.animal-detail{
+
+
+  position: fixed;
+  top:0;
+  left: 0;
+  width:100%;
+  height: 100vh;
+  z-index: 10;
+
+  .col{
+
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+
+    img{
+
+      width:auto;
+      height: 100%;
+    }
+
+    h2{
+
+      font-family: $title;
+    }
+    p{
+
+      font-family: $text;
+    }
+   
+  }
 
 }
