--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -293,6 +293,9 @@ body{
     background: transparent;
     border:solid 1px #FFF;
     color:#FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: $title;
     border-radius: 50%;
     position: absolute;
@@ -372,7 +375,7 @@ body{
 
 .animal-wrap{
 
-  position: fixed;
+  position: absolute;
   visibility: hidden;
   top:0;
   left: 0;
@@ -464,25 +467,38 @@ body{
 
 }
 .animal-detail{
-
-
-  position: fixed;
+  position: absolute;
   top:0;
   left: 0;
   width:100%;
   height: 100vh;
   z-index: 10;
+  background:rgba(0, 0, 0, 0.2);
+  display: flex;
+  color: #FFF;
 
-  .col{
+  justify-content: center;
+  align-items: center;
+
+  .row{
+
+    width: 50%;
+    height: 50%;
+    margin: 0 auto;
+  }
+
+  .col-6{
 
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
 
     img{
 
-      width:auto;
-      height: 100%;
+      width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
     }
 
     h2{
