--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -82,8 +82,8 @@ body{
     height: 50px;
     border-radius: 50%;
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-    background: #FFF url("/assets/img/volume.svg") center no-repeat;
-    background-size: 100%;
+    background: #FFF url("~@/assets/img/volume.svg") center no-repeat;
+    background-size: 50%;
 
     &:focus{
 
@@ -250,7 +250,7 @@ body{
   
   h1{
     
-    min-width: 20%;
+    width: 40%;
     margin: 0 auto;
     font-size: 5rem;
     font-family: $title;
