--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -45,9 +45,9 @@ body{
   width: 40px;
   height: 40px;
   background: #FFF;
-
+  
   &:after{
-
+    
     content: "Discover";
     display: block;
     color: #000;
@@ -55,11 +55,11 @@ body{
 }
 .logo{
   position: relative;
-
-
+  
+  
   img{
-
-        width: 100px;
+    
+    width: 100px;
     height: auto;
     z-index: 15;
     position: absolute;
@@ -68,55 +68,60 @@ body{
   }
 }
 #player{
-
+  
   position: absolute;
   bottom: 10%;
   right: 6%;
   z-index: 15;
-
+  
   .mute{
-
+    
     position: absolute;
-
     width: 50px;
     height: 50px;
     border-radius: 50%;
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
     background: #FFF url("~@/assets/img/volume.svg") center no-repeat;
     background-size: 50%;
-
+    
     &:focus{
-
+      
       box-shadow: none;
       outline: none;
     }
   }
+  .muteOn{
+    background: #FFF url("~@/assets/img/muted.svg") center no-repeat;
+    background-size: 50%;
+    
+  }
 }
 
 .nav-button{
-  
-  position: fixed;
-  transform-origin: 50% 50%;
+
+  position: absolute;
   top: 5%;
   right: 3%;
-  width: 30px;
-  height: 30px;
-  z-index: 15;
+  z-index: 99;
+  width: 50px;
+  height: 50px;
+  background: #FFF;
+  border-radius: 50%;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 6px;
   cursor: pointer;
   
   
   span{
     
     display: block;
-    background: red;
-    width: 100%;
+    background: #000;
+    width: 80%;
     height: 2px;
-    margin-bottom: 4px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top:50%;
-    left: 50%;
-    
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     
     &:first-child{
@@ -127,7 +132,7 @@ body{
     }
     &:last-child{
       
-      top: 8px;
+      margin-top: 4px;
       transform: rotate(0deg);
       
     }
@@ -137,16 +142,16 @@ body{
 }
 
 .open{
-  
   span:first-child{
-    transform: rotate(45deg);
+    transform-origin: center;
+    transform:  rotate(45deg);
     top: 8px;
     
   }
   span:nth-child(2){
     
-    
-    transform: rotate(-45deg);
+    transform-origin: center;
+    transform:  rotate(-45deg);
   }
   
 }
@@ -157,9 +162,7 @@ body{
   position: absolute;
   z-index: 14;
   top: 0;
-  
   left: 0;
-  
   background: rgba(0, 0, 0, 0.7);
   transition: all 5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5;
   color: #FFF;
@@ -290,62 +293,62 @@ body{
     transform: translate(-50%,-50%);
     transform-origin: center;
     transition: all 0.2s ease-out;
-
+    
     &:after{
-
-    width: 90px;
-    height: 90px;
-    content: "";
-    display: block;
-    background: transparent;
-    border: solid 1px rgba(255, 255, 255, 0.5);
-    font-family: $title;
-    border-radius: 50%;
-    position: absolute;
-    padding: 6px;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    transform-origin: center;
-    transition: all 0.2s ease-out;
-    animation: 5s Grow infinite forwards;
-
-
+      
+      width: 90px;
+      height: 90px;
+      content: "";
+      display: block;
+      background: transparent;
+      border: solid 1px rgba(255, 255, 255, 0.5);
+      font-family: $title;
+      border-radius: 50%;
+      position: absolute;
+      padding: 6px;
+      top:50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      transform-origin: center;
+      transition: all 0.2s ease-out;
+      animation: 5s Grow infinite forwards;
+      
+      
     }
-
+    
     @keyframes Grow {
       0%{
         width: 90px;
-    height: 90px;
-    opacity: 1;
+        height: 90px;
+        opacity: 1;
       }
-
+      
       50%{
         width: 120px;
-    height: 120px;
-    opacity: 0.2;
+        height: 120px;
+        opacity: 0.2;
       }
-
-    
+      
+      
       100% {
         width: 90px;
-    height: 90px;
-    opacity: 1;
+        height: 90px;
+        opacity: 1;
       }
     }
     
     &:hover{
       transform: translate(-50%,-50%) scale(1.2) !important;
       transform-origin: center !important;
-
+      
       &:after{
-
+        
         opacity: 0;
       }
       
     }
     &:focus{
-
+      
       box-shadow: none;
       outline: none;
       border: 0;
@@ -359,7 +362,7 @@ body{
 }
 
 .animal-wrap{
-
+  
   position: absolute;
   visibility: hidden;
   top:0;
@@ -367,89 +370,89 @@ body{
   width:100%;
   height: 100vh;
   z-index: 10;
-
+  
   .parrot{
-
+    
     bottom: 30%;
     left:20%;
   }
   .tiger{
-
+    
     top: 38%;
     left:30%;
   }
   .lizard{
-
+    
     top: 50%;
     right: 8%;
   }
   .monkey{
-
+    
     top: 40%;
     right: 30%;
   }
-
+  
   .crocodile{
-
+    
     top: 45%;
     right: 50%;
   }
-
-
-
-    .animal{
-
-      position: absolute;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-
-      &:hover{
-
-
-        img{
-
-          transform: scale(1.2);
-        }
-      }
-
-
-      &:after{
-
-        content:"";
-        display: block;
-        width: 1px;
-        height: 30px;
-        background: #FFF;
-        left: 50%;
-        bottom: -90%;
-        transform: translate(-50% -50%);
-      }
-     
-
+  
+  
+  
+  .animal{
+    
+    position: absolute;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+    &:hover{
+      
+      
       img{
-
-        width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-    border: solid 2px #FFF;
-    transition: all 0.3s ease-out;
+        
+        transform: scale(1.2);
       }
-
-      p{
-
-        font-family: $text;
-
-        color: #FFF;
-        margin: 0px 0 9px 0;
-      }
-
     }
-
+    
+    
+    &:after{
+      
+      content:"";
+      display: block;
+      width: 1px;
+      height: 30px;
+      background: #FFF;
+      left: 50%;
+      bottom: -90%;
+      transform: translate(-50% -50%);
+    }
+    
+    
+    img{
+      
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      object-fit: cover;
+      object-position: center;
+      border: solid 2px #FFF;
+      transition: all 0.3s ease-out;
+    }
+    
+    p{
+      
+      font-family: $text;
+      
+      color: #FFF;
+      margin: 0px 0 9px 0;
+    }
+    
+  }
+  
 }
 .animal-detail{
   position: absolute;
@@ -461,45 +464,40 @@ body{
   background:rgba(0, 0, 0, 0.2);
   display: flex;
   color: #FFF;
-
+  
   justify-content: center;
   align-items: center;
-
+  
   .row{
-
+    
     width: 50%;
     height: 50%;
     margin: 0 auto;
   }
-
+  
   .col-6{
-
+    
     width: 100%;
     height: 100%;
     overflow: hidden;
-
+    
     img{
-
+      
       width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
     }
-
+    
     h2{
-
+      
       font-family: $title;
     }
     p{
-
+      
       font-family: $text;
     }
-   
+    
   }
-
-}
-#parrot{
-
-
-  background: yellow;
+  
 }
