--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,15 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Chango|Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Anton&display=swap');
 
 
-
-
-
-
-
-
-
-$title: 'Chango', cursive;
-$text: 'Dancing Script', cursive;
+$title: 'Anton', sans-serif;;
+$text: 'Abril Fatface', cursive;
 
 
 
@@ -26,478 +19,67 @@ $text: 'Dancing Script', cursive;
 body{
   height: auto;
   width: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
 }
-
-.cursor{
+.overlay-loader{
   
-  width: 25px;
-  height: 25px;
-  border: solid 1px rgba(255, 255, 255, 0.7);
-  border-radius: 50%;
-  position: absolute;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100vh;
+  background: #FF0000;
   z-index: 9999;
-  transition: all 0.2s cubic-bezier(0.19, 1, 0.22, 1);
-}
-.cursorHover{
-  width: 40px;
-  height: 40px;
-  background: #FFF;
-  
-  &:after{
-    
-    content: "Discover";
-    display: block;
-    color: #000;
-  }
-}
-.logo{
-  position: relative;
-  
-  
-  img{
-    
-    width: 100px;
-    height: auto;
-    z-index: 15;
-    position: absolute;
-    top: 2%;
-    left: 1%;
-  }
-}
-#player{
-  
-  position: absolute;
-  bottom: 10%;
-  right: 6%;
-  z-index: 15;
-  
-  .mute{
-    
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-    background: #FFF url("~@/assets/img/volume.svg") center no-repeat;
-    background-size: 50%;
-    
-    &:focus{
-      
-      box-shadow: none;
-      outline: none;
-    }
-  }
-  .muteOn{
-    background: #FFF url("~@/assets/img/muted.svg") center no-repeat;
-    background-size: 50%;
-    
-  }
-}
 
-.nav-button{
-
-  position: absolute;
-  top: 5%;
-  right: 3%;
-  z-index: 99;
-  width: 50px;
-  height: 50px;
-  background: #FFF;
-  border-radius: 50%;
-  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 6px;
-  cursor: pointer;
-  
-  
   span{
-    
-    display: block;
-    background: #000;
-    width: 80%;
-    height: 2px;
-    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    
-    &:first-child{
-      top: 0px;
-      transform: rotate(0deg);
-      
-      
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 100vh;
+    background: rgba(0, 0,0,0.3);
+
+    &:nth-of-type(1){
+
+      margin-left: 33.33%;
     }
-    &:last-child{
-      
-      margin-top: 4px;
-      transform: rotate(0deg);
-      
+    &:nth-of-type(2){
+
+      margin-left: 66.66%;
     }
-    
-    
   }
+  
 }
 
-.open{
-  span:first-child{
-    transform-origin: center;
-    transform:  rotate(45deg);
-    top: 8px;
-    
-  }
-  span:nth-child(2){
-    
-    transform-origin: center;
-    transform:  rotate(-45deg);
-  }
-  
-}
-.menu{
-  
-  width: 100%;
-  height: 0;
-  position: absolute;
-  z-index: 14;
+.grid{
+  position: fixed;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  transition: all 5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5;
-  color: #FFF;
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-  
-  
-  ul{
-    
-    display: flex;
-    list-style: none;
-    
-    justify-content: center;
-    
-    align-items: center;
-    
-    li{
-      
-      
-      margin-right: 100px;
-      font-size: 4rem;
-      transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-      cursor: pointer;
-      
-      &:last-child{
-        
-        margin:0;
-      }
-      
-      a{
-        
-        text-decoration: none;
-      }
-    }
-    
-    
-  }
-}
-
-.back{
-  
-  position: absolute;
-  top:0;
   right: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: left;
-}
+  bottom: 0;
+  width: calc(100% - 200px);
+  height: 100VH;
+  border-left: solid 1px rgba(0, 0,0,0.3);
+  border-right: solid 1px rgba(0, 0,0,0.3);
+  margin: 0 auto;
+  background: transparent;
+  pointer-events: none;
+  z-index: 9000;
 
-.img-container {
-  margin: 0 0 50px;
-  
-  img {
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-  }
-}
+  span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 100vh;
+    background: rgba(0, 0,0,0.3);
 
-.title{
-  
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: #FFF;
-  
-  position: relative;
-  
-  h2{
-    
-    width: 40%;
-    margin: 0 auto;
-    font-family: $text;
-    font-size: 2rem;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
-  
-  h1{
-    
-    width: 40%;
-    margin: 0 auto;
-    font-size: 5rem;
-    font-family: $title;
-    
-    position: absolute;
-    top:55%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
-  p{
-    
-    
-    font-size: 2rem;
-    font-family: $text;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
-  
-  .explore{
-    
-    width: 80px;
-    height: 80px;
-    background: transparent;
-    border:solid 1px #FFF;
-    color:#FFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: $title;
-    border-radius: 50%;
-    position: absolute;
-    padding: 6px;
-    top:55%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    transform-origin: center;
-    transition: all 0.2s ease-out;
-    
-    &:after{
-      
-      width: 90px;
-      height: 90px;
-      content: "";
-      display: block;
-      background: transparent;
-      border: solid 1px rgba(255, 255, 255, 0.5);
-      font-family: $title;
-      border-radius: 50%;
-      position: absolute;
-      padding: 6px;
-      top:50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-      transform-origin: center;
-      transition: all 0.2s ease-out;
-      animation: 5s Grow infinite forwards;
-      
-      
-    }
-    
-    @keyframes Grow {
-      0%{
-        width: 90px;
-        height: 90px;
-        opacity: 1;
-      }
-      
-      50%{
-        width: 120px;
-        height: 120px;
-        opacity: 0.2;
-      }
-      
-      
-      100% {
-        width: 90px;
-        height: 90px;
-        opacity: 1;
-      }
-    }
-    
-    &:hover{
-      transform: translate(-50%,-50%) scale(1.2) !important;
-      transform-origin: center !important;
-      
-      &:after{
-        
-        opacity: 0;
-      }
-      
-    }
-    &:focus{
-      
-      box-shadow: none;
-      outline: none;
-      border: 0;
-    }
-    
-    
-    
-  }
-  
-  
-}
+    &:nth-of-type(1){
 
-.animal-wrap{
-  
-  position: absolute;
-  visibility: hidden;
-  top:0;
-  left: 0;
-  width:100%;
-  height: 100vh;
-  z-index: 10;
-  
-  .parrot{
-    
-    bottom: 30%;
-    left:20%;
-  }
-  .tiger{
-    
-    top: 38%;
-    left:30%;
-  }
-  .lizard{
-    
-    top: 50%;
-    right: 8%;
-  }
-  .monkey{
-    
-    top: 40%;
-    right: 30%;
-  }
-  
-  .crocodile{
-    
-    top: 45%;
-    right: 50%;
-  }
-  
-  
-  
-  .animal{
-    
-    position: absolute;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
-    &:hover{
-      
-      
-      img{
-        
-        transform: scale(1.2);
-      }
+      margin-left: 33.33%;
     }
-    
-    
-    &:after{
-      
-      content:"";
-      display: block;
-      width: 1px;
-      height: 30px;
-      background: #FFF;
-      left: 50%;
-      bottom: -90%;
-      transform: translate(-50% -50%);
+    &:nth-of-type(2){
+
+      margin-left: 66.66%;
     }
-    
-    
-    img{
-      
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-      object-position: center;
-      border: solid 2px #FFF;
-      transition: all 0.3s ease-out;
-    }
-    
-    p{
-      
-      font-family: $text;
-      
-      color: #FFF;
-      margin: 0px 0 9px 0;
-    }
-    
   }
-  
-}
-.animal-detail{
-  position: absolute;
-  top:0;
-  left: 0;
-  width:100%;
-  height: 100vh;
-  z-index: 10;
-  background:rgba(0, 0, 0, 0.2);
-  display: flex;
-  color: #FFF;
-  
-  justify-content: center;
-  align-items: center;
-  
-  .row{
-    
-    width: 50%;
-    height: 50%;
-    margin: 0 auto;
-  }
-  
-  .col-6{
-    
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    
-    img{
-      
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-    
-    h2{
-      
-      font-family: $title;
-    }
-    p{
-      
-      font-family: $text;
-    }
-    
-  }
-  
 }
