--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Anton&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Satisfy&display=swap');
 
 $title: 'Anton', sans-serif;;
 $text: 'Abril Fatface', cursive;
+$sign: 'Satisfy', cursive;
 
-
+$left: 33.63%;
+$bleft: 66.33%;
+$red: #FF0000;
 
 *{
   
@@ -19,6 +22,7 @@ $text: 'Abril Fatface', cursive;
 body{
   height: auto;
   width: 100%;
+  overflow-x: hidden;
 }
 .overlay-loader{
   
@@ -29,24 +33,36 @@ body{
   height: 100vh;
   background: #FF0000;
   z-index: 9999;
-
+  
   span{
     position: absolute;
     top: 0;
     left: 0;
     width: 1px;
     height: 100vh;
-    background: rgba(0, 0,0,0.3);
-
+    background: rgba(0, 0,0,0.1);
+    
     &:nth-of-type(1){
-
+      
       margin-left: 33.33%;
     }
     &:nth-of-type(2){
-
+      
       margin-left: 66.66%;
     }
   }
+  
+}
+.overlay-loader2{
+  
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100vh;
+  background: #000;
+  z-index: 9998;
+  
   
 }
 
@@ -58,28 +74,226 @@ body{
   bottom: 0;
   width: calc(100% - 200px);
   height: 100VH;
-  border-left: solid 1px rgba(0, 0,0,0.3);
-  border-right: solid 1px rgba(0, 0,0,0.3);
+  border-left: solid 1px rgba(0, 0,0,0.1);
+  border-right: solid 1px rgba(0, 0,0,0.1);
   margin: 0 auto;
   background: transparent;
   pointer-events: none;
   z-index: 9000;
-
+  
   span{
     position: absolute;
     top: 0;
     left: 0;
     width: 1px;
     height: 100vh;
-    background: rgba(0, 0,0,0.3);
-
+    background: rgba(0, 0,0,0.1);
+    
     &:nth-of-type(1){
-
-      margin-left: 33.33%;
+      
+      margin-left: $left;
     }
     &:nth-of-type(2){
-
-      margin-left: 66.66%;
+      
+      margin-left: $bleft;
     }
   }
+}
+
+.main{
+  position: relative;
+  height: 100vh;
+  width: calc(100% - 200px);
+  margin: 0 auto;
+  overflow: hidden;
+
+  img{
+
+    position: absolute;
+    height: 100vh;
+    width: 33.63%;
+    right: 0px;
+    top: 0;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0.2;
+    overflow: hidden;
+
+
+  }
+
+  .overlayImg{
+
+    position: absolute;
+    display: block;
+    content: "";
+    top: 0;
+    right: 0px;
+    width: 33.63%;
+    height: 100%;
+    background: #FFF;
+  }
+  
+  ul{
+    display: flex;
+    width:100%;
+    position: absolute;
+    top: 5%;
+    
+    
+    li{
+      font-family: "Anton", sans-serif;
+      list-style: none;
+      color: #616161;
+
+      &:nth-of-type(1){
+        margin-left: 16.93%;
+      }
+      
+      &:nth-of-type(2){
+        margin-left: 26.93%;
+      }
+      
+      
+    }
+  }
+  
+  h1{
+    
+    position: absolute;
+    overflow: hidden;
+    top: 15%;
+    width: 80%;
+    font-size: 20rem;
+    word-break: break-all;
+    text-transform: uppercase;
+    font-family: "Anton", sans-serif;
+    background: linear-gradient(0deg,rgba(194, 0, 0, 0.2),rgba(250, 0, 0, 0.9)), url('~@/assets/img/pol1.jpg') no-repeat;
+    background-size: cover;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  h2{
+    
+    position: absolute;
+    font-size: 5rem;
+    top: 20%;
+    right: 0%;
+    word-break: break-word;
+    font-family: "Anton", sans-serif;
+    width: 6%;
+    min-width: 6%;
+    color: rgba(194, 0, 0, 1)
+  }
+  
+  h3{
+    font-family: $sign;
+    line-height: 2;
+    
+    font-size: 6rem;
+    color: #000;
+    position: absolute;
+    top: 40%;
+    width: 80%;
+  }
+  
+  .scroll{
+    
+    position: absolute;
+    bottom: 15%;
+    right: -2%;
+    transform: rotate(90deg);
+    font-family: "Anton", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    width: 100px;
+    
+    span{
+      
+      content: "";
+      display: block;
+      height: 30px;
+      width: 2px;
+      margin-left: 20px;
+      background: #000;
+      transform: rotate(90deg);
+      position: absolute;
+      animation: 2s scrollDown cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      
+      @keyframes scrollDown{
+        
+        
+        from{
+          
+          left: 70%;
+        }
+        to{
+          
+          left: 100%;
+        }
+      }
+      
+      
+    }
+  }
+}
+
+.second{
+  position: relative;
+  height: 100vh;
+  width: calc(100% - 200px);
+  margin: 200px auto;
+  overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .back{
+
+    position: absolute;
+    top:0;
+    z-index: 1;
+    opacity: 1.2;
+    background: url('~@/assets/img/pol1.jpg') center no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 150%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .content{
+
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    h2{
+
+      font-family: $title;
+      color: #FFF;
+      font-size: 4rem;
+    }
+    p{
+  
+      font-family: $text;
+      font-size: 2rem;
+  
+      color: #FFF;
+    }
+  }
+
+  
+
+
+
+
 }
