--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,4 +1,52 @@
-@import '@/assets/css/main.scss';
+
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Anton&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Satisfy&display=swap');
+
+$title: 'Anton', sans-serif;;
+$text: 'Abril Fatface', cursive;
+$sign: 'Satisfy', cursive;
+
+$left: 33.63%;
+$bleft: 66.33%;
+$red: #FF0000;
+
+*{
+  
+  margin: 0;
+  padding: 0;
+  
+  :after, :before {
+    box-sizing: border-box;
+  }
+  
+} 
+body{
+  height: auto;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.viewport {
+    overflow: hidden;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  
+  .scroll-container {  
+    position: absolute;  
+    overflow: hidden;
+    z-index: 10;
+    display: flex;
+    justify-content: center;  
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+  }
 
 
 .logo{
