--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -23,12 +23,11 @@ $red: #FF0000;
 html {
     scroll-behavior: smooth;
   }
-  
+
 body {
     overflow-x: hidden;
     overflow-y: scroll;
   }
-  
   .viewport {
     overflow: hidden;
     position: fixed;
@@ -127,3 +126,14 @@ nav{
     }
 
 }
+
+svg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    pointer-events: none;
+    fill: rgba(255, 0, 0,0.7);
+  }
