--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -27,6 +27,7 @@ html {
 body {
     overflow-x: hidden;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
   }
   .viewport {
     overflow: hidden;
