--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -23,9 +23,17 @@ $red: #FF0000;
 body {
   width: 100%;
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
+
+}
+
+.viewport{
+  width: 100%;
+  height: 100vh;
   overflow-y: auto;
 }
+
+
 .content {
   width: 60%; 
   padding-top:50px;
