--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -82,9 +82,9 @@
   width: calc(100% - 200px);
   margin: 0 auto;
   overflow: hidden;
-
+  
   img{
-
+    
     position: absolute;
     height: 100vh;
     width: 33.63%;
@@ -94,12 +94,12 @@
     object-position: center;
     opacity: 0.2;
     overflow: hidden;
-
-
+    
+    
   }
-
+  
   .overlayImg{
-
+    
     position: absolute;
     display: block;
     content: "";
@@ -121,7 +121,7 @@
       font-family: "Anton", sans-serif;
       list-style: none;
       color: #616161;
-
+      
       &:nth-of-type(1){
         margin-left: 16.93%;
       }
@@ -223,14 +223,14 @@
   width: calc(100% - 200px);
   margin: 200px auto;
   overflow: hidden;
-
+  
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
+  
   .back{
-
+    
     position: absolute;
     top:0;
     z-index: 1;
@@ -242,34 +242,42 @@
     object-fit: cover;
     object-position: center;
   }
-
+  
   .content{
-
+    
     position: relative;
     z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+    
     h2{
-
+      
       font-family: $title;
       color: #FFF;
       font-size: 4rem;
     }
     p{
-  
+      
       font-family: $text;
       font-size: 2rem;
-  
+      
       color: #FFF;
     }
-  }
+  }  
+}
 
-  
-
-
-
-
+.modal {
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1050;
+  display: block;
+  width: 30%;
+  height: 30%;
+  overflow: hidden;
+  outline: 0;
+  background: #FFF;
+  box-shadow: 2px 2px 20px rgba(0, 0,0,0.1);
 }
