--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -22,7 +22,7 @@ $red: #FF0000;
 } 
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 
 }
@@ -121,4 +121,12 @@ svg {
   z-index: 99999;
   pointer-events: none;
   fill: rgba(255, 0, 0,0.7);
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 0.25s ease-out;
+}
+
+.fade-enter, .fade-leave-to {
+  opacity: 0;
 }
