--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -281,3 +281,58 @@
   background: #FFF;
   box-shadow: 2px 2px 20px rgba(0, 0,0,0.1);
 }
+
+.about{
+
+  position: relative;
+    height: 100vh;
+    width: calc(100% - 200px);
+    margin: 100px auto;
+
+    h1{
+
+      font-family: $title;
+    }
+
+    .content {
+      width: 60%;
+      padding-top: 50px;
+      margin: 100px auto 400px auto;
+
+      .img-container{
+        position: relative;
+        
+
+        .tag{
+          position: absolute;
+          background: #fff;
+          color: #000;
+          padding: 12px;
+          bottom: 10%;
+          left: 10%;
+          display: flex;
+
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+
+          h2{
+            font-family: $title;
+
+  
+  
+          }
+          p{
+  
+            font-family: $text;
+          }
+
+
+        }
+
+        
+
+
+      }
+  }
+}
